[gd_scene load_steps=12 format=2]

[ext_resource path="res://game/characters/player/player_hud/hud.gd" type="Script" id=1]
[ext_resource path="res://game/pause/pause_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/characters/player/player_hud/portraits/portrait_townguard_ingame.png" type="Texture" id=3]
[ext_resource path="res://game/characters/player/player_hud/bar/health_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/characters/player/player_hud/player_hud.tres" type="Theme" id=5]
[ext_resource path="res://game/characters/player/player_hud/fps_counter.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/characters/player/player_hud/block_count.gd" type="Script" id=7]
[ext_resource path="res://fonts/Kenney Pixel.tres" type="DynamicFontData" id=8]
[ext_resource path="res://game/characters/player/player_hud/game_log.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
use_mipmaps = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
resource_name = "hide_game_log"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="hud" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" parent="." instance=ExtResource( 2 )]
pause_mode = 2
visible = false
margin_right = 106.0
margin_bottom = 74.0

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="xp_center_cont" type="CenterContainer" parent="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 10.0

[node name="xp_bar" type="ProgressBar" parent="HBoxContainer/xp_center_cont"]
margin_left = 15.0
margin_right = 1265.0
margin_bottom = 10.0
rect_min_size = Vector2( 1250, 10 )
step = 1.0
value = 1.0
percent_visible = false

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_top = 14.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 10
custom_constants/margin_left = 16

[node name="HBox" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 10.0
margin_right = 1264.0
margin_bottom = 706.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/HBox"]
margin_right = 470.0
margin_bottom = 64.0
size_flags_horizontal = 0
custom_constants/separation = 10

[node name="portrait" type="TextureRect" parent="HBoxContainer/MarginContainer/HBox/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="CenterContainer" parent="HBoxContainer/MarginContainer/HBox/VBoxContainer"]
margin_left = 74.0
margin_right = 470.0
margin_bottom = 64.0
__meta__ = {
"_edit_group_": true
}

[node name="bar" parent="HBoxContainer/MarginContainer/HBox/VBoxContainer/MarginContainer" instance=ExtResource( 4 )]
margin_top = 5.0
margin_bottom = 58.0

[node name="debug_container" type="VBoxContainer" parent="HBoxContainer/MarginContainer/HBox"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 68.0
margin_right = 1248.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="debug_ms" type="Label" parent="HBoxContainer/MarginContainer/HBox/debug_container"]
margin_right = 1248.0
margin_bottom = 22.0
mouse_filter = 1
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Move speed:"

[node name="fps_count" parent="HBoxContainer/MarginContainer/HBox/debug_container" instance=ExtResource( 6 )]
margin_top = 26.0
margin_right = 1248.0
margin_bottom = 48.0
theme = ExtResource( 5 )
text = "FPS:"

[node name="armor" type="Label" parent="HBoxContainer/MarginContainer/HBox/debug_container"]
margin_top = 52.0
margin_right = 1248.0
margin_bottom = 74.0
theme = ExtResource( 5 )
text = "Armor: "
script = ExtResource( 7 )

[node name="game_log" type="RichTextLabel" parent="HBoxContainer/MarginContainer/HBox"]
margin_top = 460.0
margin_right = 1248.0
margin_bottom = 660.0
rect_min_size = Vector2( 640, 200 )
custom_fonts/normal_font = SubResource( 1 )
scroll_following = true
script = ExtResource( 9 )

[node name="log_hide_timer" type="Timer" parent="HBoxContainer/MarginContainer/HBox/game_log"]
wait_time = 5.0

[node name="game_log_animation" type="AnimationPlayer" parent="HBoxContainer/MarginContainer/HBox/game_log"]
anims/hide_game_log = SubResource( 2 )

[node name="level_margin_cont" type="MarginContainer" parent="HBoxContainer/MarginContainer/HBox"]
margin_top = 664.0
margin_right = 1248.0
margin_bottom = 696.0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="game_level" type="Label" parent="HBoxContainer/MarginContainer/HBox/level_margin_cont"]
margin_right = 83.0
margin_bottom = 22.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Level Test"
[connection signal="update_health_bar" from="." to="HBoxContainer/MarginContainer/HBox/VBoxContainer/MarginContainer/bar" method="_on_hud_update_health_bar"]
[connection signal="update_max_health_bar" from="." to="HBoxContainer/MarginContainer/HBox/VBoxContainer/MarginContainer/bar" method="_on_hud_update_max_health_bar"]
[connection signal="mouse_entered" from="HBoxContainer/MarginContainer/HBox/game_log" to="HBoxContainer/MarginContainer/HBox/game_log" method="_on_game_log_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/MarginContainer/HBox/game_log" to="HBoxContainer/MarginContainer/HBox/game_log" method="_on_game_log_mouse_exited"]
[connection signal="timeout" from="HBoxContainer/MarginContainer/HBox/game_log/log_hide_timer" to="HBoxContainer/MarginContainer/HBox/game_log" method="_on_log_hide_timer_timeout"]
